update SecurityConfig